datable updates working with Adil

--- a/Datable.html
+++ b/Datable.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="./keshif.js" charset="utf-8"></script>
     <link rel="stylesheet" href="./keshif.css" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- TO HERE -->
 
     <script type="text/javascript">
@@ -28,8 +29,8 @@
           leftPanelLabelWidth: 230,
           middlePanelLabelWidth: 230,
           source: {
-            gdocId: '1hSAnjE6eRH-fvL4A6s1CSurIP-e2wcwLDF14AFvAeu0',
-            tables: "Candidate_Pool.csv"
+            gdocId: '1y83VOWlGV4GThxp1xQlDH4Sz74bmja-EibflTfqnySU',
+            tables: "Form_Responses_1"
           },
           summaries: [
             // { name: "When was the last time you committed code?" },
@@ -85,7 +86,7 @@
                   ((minor!==null)?("<div class='minor'>"+minor+"</div>"):"")+
                 "</div>"+
                 "<div class='col-md-3'>" +
-                  "<div class='_contact'>" + CONTACT + "</div>" +
+                  "<div class='_contact'> CONTACT </div>" +
                 "</div>" +
               "</div>";
             },
