--- a/datable.html
+++ b/datable.html
@@ -164,7 +164,7 @@
         </div>
 
         <div id="candidate_intros" class="two columns">
-          <a class="head_button button button-primary" target="_blank" href="www.datacommunitydc.org/sponsorship/candidate-pool-introduction">Request Introductions</a>
+          <a class="head_button button button-primary" target="_blank" href="http://www.datacommunitydc.org/sponsorship/candidate-pool-introduction">Request Introductions</a>
           <a class="head_button button" target="_blank" href="https://docs.google.com/spreadsheets/d/1hSAnjE6eRH-fvL4A6s1CSurIP-e2wcwLDF14AFvAeu0/edit#gid=864063755">See The Raw List</a>
           <table class="u-full-width">
             <thead>
