added helprace and removed Datable from title

--- a/datable.html
+++ b/datable.html
@@ -567,7 +567,8 @@ body{
       <div class="row">
         <div class="ten columns">
           <a href='http://www.datacommunitydc.org' target='_blank'><img id="DC2logo" src="./images/DC2_logo_wide_600wide.png"/></a>
-          <h2 style='display: inline-block; margin-left: 1em; margin-bottom: 0px;'> DATABLE</h2></div>
+          <!--<h3 style='display: inline-block; margin-left: 1em; margin-bottom: 0px;'> Datable</h3>-->
+        </div>
         <div class="two columns" style='padding-top: 1em;'>
           <img class='_logo' src="./images/GI-helix-large.png"/>
           <a href='http://www.keshif.me' target='_blank' title="Keshif: Data Made Explorable" id="kshfLogo" 
@@ -576,7 +577,7 @@ body{
         </div>
       <div class="row" style="margin-bottom: 15px;">
         <div class="twelve columns">
-          <a class="button button-primary" target="_blank" href="http://www.datacommunitydc.org/sponsorship/candidate-pool-introduction">Introduce me to candidates ... <i class='fa fa-arrow-right'></i></a>
+          <a class="button button-primary" target="_blank" href="http://www.datacommunitydc.org/sponsorship/candidate-pool-introduction">Introduce me to these candidates <i class='fa fa-arrow-right'></i><i class='fa fa-arrow-right'></i></a>
           <div id="SelectedContainer"></div>
           </div>
           <!--<a class="button" target="_blank" href="https://docs.google.com/spreadsheets/d/1hSAnjE6eRH-fvL4A6s1CSurIP-e2wcwLDF14AFvAeu0/edit#gid=864063755">See The Raw List</a>-->
@@ -611,5 +612,18 @@ body{
 
       </div>
     </div>
+    <script src="//d1culzimi74ed4.cloudfront.net/js/feedback/feedback.js"></script>
+    <script>
+      ChdFeedbackWidget.init({
+        url: "//gi.helprace.com/chd-widgets/feedback",
+        assetsUrl: "//d1culzimi74ed4.cloudfront.net/",
+        feedbackType: "tab",
+        tabTitle: "Feedback & Support",
+        tabPosition: "left",
+        tabBgColor: "#0070c0",
+        tabTextColor: "#000000",
+        tabAction: "false"
+      });
+    </script>
   </body>
 </html>
