added beta and moved the logos to the ULHS

--- a/datable.html
+++ b/datable.html
@@ -565,16 +565,17 @@ body{
   <body>
     <div class="container">
       <div class="row">
-        <div class="ten columns">
+        <div class="nine columns">
           <a href='http://www.datacommunitydc.org' target='_blank'><img id="DC2logo" src="./images/DC2_logo_wide_600wide.png"/></a>
-          <!--<h3 style='display: inline-block; margin-left: 1em; margin-bottom: 0px;'> Datable</h3>-->
-        </div>
-        <div class="two columns" style='padding-top: 1em;'>
-          <img class='_logo' src="./images/GI-helix-large.png"/>
-          <a href='http://www.keshif.me' target='_blank' title="Keshif: Data Made Explorable" id="kshfLogo" 
+          <img class='_logo' style='margin-left: 1em' src="./images/GI-helix-large.png"/>
+          <a href='http://www.keshif.me' target='_blank' title="Keshif: Data Made Explorable" id="kshfLogo"
             style='height: 3em; display: inline-block; width: 3em;'></a>
-          </div>
         </div>
+
+        <div class="three columns">
+          <h3 title="Feedback welcome via Helprace on the LHS" style="margin: 0;text-align: right;font-family:AgencyFB">BETA</h3>
+        </div>
+      </div>
       <div class="row" style="margin-bottom: 15px;">
         <div class="twelve columns">
           <a class="button button-primary" target="_blank" href="http://www.datacommunitydc.org/sponsorship/candidate-pool-introduction">Introduce me to these candidates <i class='fa fa-arrow-right'></i><i class='fa fa-arrow-right'></i></a>
@@ -620,7 +621,7 @@ body{
         feedbackType: "tab",
         tabTitle: "Feedback & Support",
         tabPosition: "left",
-        tabBgColor: "#0070c0",
+        tabBgColor: "#33C3F0",
         tabTextColor: "#000000",
         tabAction: "false"
       });
