--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@ google.setOnLoadCallback(function(){
     },
     summaries: [
       // { name: "When was the last time you committed code?" },
-      { name: "Experience Level", value: "What's your experience level?" },
+      { name: "Experience Level", 
+        value: "What's your experience level?",
+        catSortBy: [
+          "Veteran (10+ years)",
+          "Senior (5+ years)",
+          "Mid-Level (3-5 years)",
+          "Junior (1-3 years)",
+          "Entry Level (0 years)"
+        ]
+        },
       { name: "Degrees earned", value: 'What Degrees have you earned?', catSplit: ", " },
       { name: "Data Science Techniques", value: "What Data Science techniques have you worked with?", catSplit: ", " },
       { name: "Languages and Libraries", value: "What languages & libraries do you use?", catSplit: ", " },
@@ -95,7 +104,8 @@ google.setOnLoadCallback(function(){
           function(){
             if(d.customSelect) d.customSelect = false;
             else d.customSelect = true;
-            this.textContent = d.customSelect?"Remove":"Select";
+            this.textContent = d.customSelect?"":"Select";
+            d3.select(this).classed("customSelect",d.customSelect);
             refreshSelectedList();
             //window.open("www.datacommunitydc.org/sponsorship/candidate-pool-introduction");
           });
@@ -535,6 +545,18 @@ img {
   background-color: #33C3F0;
   color: white;
   float: right;
+  border-width: 0px;
+}
+.kshf .selectBox.customSelect{
+  background-color: orangered;
+  width: 25px;
+  text-align: center;
+}
+.kshf .selectBox.customSelect:before{
+  content: "✔ ";
+}
+.kshf .selectBox.customSelect:hover:before{
+  content: "✖";
 }
 .selectBox{
   display: inline-block;
@@ -560,6 +582,10 @@ img {
 body{
   background-color: #EEEEEE;
 }
+.rightBoxes > .fa-question-circle{ display: none !important; }
+.rightBoxes > .showConfigButton{ display: none !important; }
+.rightBoxes > .fullscreen{ display: none !important; }
+.kshf .saveSelection {display: none !important; }
 </style>
 
   <body>
@@ -576,7 +602,7 @@ body{
           <h3 title="Feedback welcome via Helprace on the LHS" style="margin: 0;text-align: right;font-family:AgencyFB">BETA</h3>
         </div>
       </div>
-      <div class="row" style="margin-bottom: 15px;">
+      <div class="row">
         <div class="twelve columns">
           <a class="button button-primary" target="_blank" href="http://www.datacommunitydc.org/sponsorship/candidate-pool-introduction">Introduce me to these candidates <i class='fa fa-arrow-right'></i><i class='fa fa-arrow-right'></i></a>
           <div id="SelectedContainer"></div>
@@ -588,29 +614,6 @@ body{
         </div>
         </div>
       </div>
-      <!--
-    <div class="contents">
-      <div class="row">
-        <div class="ten columns">
-          <div id="header" class="row">
-            <div class="four columns">
-
-            </div>
-
-            <div class="eight columns center">
-              <h3>  </h3>
-            </div>
-          </div>
-
-          <div class="row">
-            <div id="logos" class="one column center">
-            </div>
-
-
-            </div>
-          </div>
-        </div>-->
-
       </div>
     </div>
     <script src="//d1culzimi74ed4.cloudfront.net/js/feedback/feedback.js"></script>
