added a tutorial link

--- a/datable.html
+++ b/datable.html
@@ -577,12 +577,15 @@ body{
         </div>
       </div>
       <div class="row" style="margin-bottom: 15px;">
-        <div class="twelve columns">
+        <div class="nine columns">
           <a class="button button-primary" target="_blank" href="http://www.datacommunitydc.org/sponsorship/candidate-pool-introduction">Introduce me to these candidates <i class='fa fa-arrow-right'></i><i class='fa fa-arrow-right'></i></a>
           <div id="SelectedContainer"></div>
-          </div>
+        </div>
+        <div class="three columns">
+          <a class="button" style="margin: 0;position: absolute;right:0px" target="_blank" href="https://youtu.be/3Hmvms-1grU">Tutorial</a>
           <!--<a class="button" target="_blank" href="https://docs.google.com/spreadsheets/d/1hSAnjE6eRH-fvL4A6s1CSurIP-e2wcwLDF14AFvAeu0/edit#gid=864063755">See The Raw List</a>-->
         </div>
+      </div>
       <div class="row">
         <div class="twelve columns"><div id="datable_demo"></div>
         </div>
