--- a/datable.html
+++ b/datable.html
@@ -19,6 +19,19 @@
 var browser;
 
 google.setOnLoadCallback(function(){
+//  var paypal = '<form class="PayPalBuyButton"  target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">' +
+//              '<input type="hidden" name="cmd" value="_xclick">' +
+//              '<INPUT TYPE="hidden" name="charset" value="utf-8">' +
+//              '<input type="hidden" name="item_name" value="CandidateIntro_'+this.id+'">' +
+//              '<input type="hidden" name="amount" value="35">' +
+//              '<input type="hidden" name="tax" value="0">' +
+//              '<input type="hidden" name="quantity" value="1">'+
+//              '<input type="hidden" name="no_note" value="1">'+
+//              '<input type="hidden" name="currency_code" value="USD">'+
+//              '<input type="hidden" name="business" value="seang@datacommunitydc.org">'+
+//              //'<input type="hidden" name="hosted_button_id" value="6NKAMDC6VZ2AQ">' +
+//              '<input class="PayPalSubmit" type="submit" value="Get Introduced!" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">' +
+//            '</form>';
   browser = new kshf.Browser({
     domID: "#datable_demo", // This is the DOM id, might be different for your page.
     itemName: "Datable Candidates",
@@ -99,19 +112,30 @@ google.setOnLoadCallback(function(){
         var major = this["Describe yourself in one sentence."];
         if(major===null) major = "-";
         var minor = this["Please describe three data science or data related projects you've worked on in the last three years. These can be features of larger projects, consulting projects, classified work described generally, or open source contributions."];
-        return  '<form class="PayPalBuyButton"  target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">' +
-              '<input type="hidden" name="cmd" value="_xclick">' +
+        return '<form class="PayPalBuyButton"  target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">' +
+              '<input type="hidden" name="cmd" value="_s-xclick">' +
+              '<input type="hidden" name="upload" value="1">' +
+              '<input type="hidden" name="hosted_button_id" value="6NKAMDC6VZ2AQ">' +
+//              '<input type="hidden" add="1">' +
               '<INPUT TYPE="hidden" name="charset" value="utf-8">' +
-              '<input type="hidden" name="item_name" value="CandidateIntro_'+this.id+'">' +
-              '<input type="hidden" name="amount" value="35">' +
+              '<input type="hidden" name="item_name_'+this.id+'" value="CandidateIntro_'+this.id+'">' +
+              '<input type="hidden" name="amount_'+this.id+'" value="35">' +
+              '<input type="hidden" name="shipping_'+this.id+'" value="0">' +
+              '<input type="hidden" name="handling_'+this.id+'" value="0">' +
               '<input type="hidden" name="tax" value="0">' +
-              '<input type="hidden" name="quantity" value="1">'+
-              '<input type="hidden" name="no_note" value="1">'+
               '<input type="hidden" name="currency_code" value="USD">'+
               '<input type="hidden" name="business" value="seang@datacommunitydc.org">'+
-              //'<input type="hidden" name="hosted_button_id" value="6NKAMDC6VZ2AQ">' +
               '<input class="PayPalSubmit" type="submit" value="Get Introduced!" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">' +
-            '</form>' +
+            '</form>'  +
+
+           // <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+           //     <input type="hidden" name="cmd" value="_s-xclick">
+           //     <input type="hidden" name="hosted_button_id" value="6NKAMDC6VZ2AQ">
+           //     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+           //     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+           // </form>
+
+
           // major description
           "<div class='descr_major'>" + major + "</div>"+
           // minor description
